2004-02-29  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/docgen/LPRDoc.py: Add to CVS.

2004-02-28  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/GrampsParser.py (start_childof): Call add_parent_family_id()
	with three arguments, instead of a tuple.
	* src/ReadXML.py: Comment out renaming lost media objects for now.
	* src/RelLib.py (find_place_no_conflicts,
	find_family_no_conflicts): Use str(idVal). 
	* src/docgen/AsciiDoc.py: Add to CVS.
	* src/Makefile.am, src/Makefile.in: Ship AsciiDoc.py.
	* src/FamilyView.py: Corrections.
	* src/Marriage.py: Corrections.

2004-02-28  Don Allingham  <dallingham@users.sourceforge.net>
	* src/ChooseParents.py: fix typo
	* src/PedView.py: build child menu with IDs
	* src/ReadGedcom.py: save birth/death events, handle FTM's broken
	"_primary" junk
	* src/gramps_main.py: switch to DB as default, remove save option
	* src/RelLib.py: setup DB environment better
	* src/DbPrompter.py: handle save/open with new DBs

2004-02-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddMedia.py: media reference fixes
	* src/MediaView.py: media reference fixes
	* src/FamilyView.py: commit child changes
	* src/PlaceView.py: ID fixes

2004-02-24  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/WebPage.py: media reference fixes
	* src/plugins/ReadGedcom.py: media reference fixes
	* src/plugins/IndivSummary.py: media reference fixes
	* src/plugins/IndivComplete.py: media reference fixes
	* src/plugins/DetAncestralReport.py: media reference fixes
	* src/plugins/DetDescendantReport.py: media reference fixes
	* src/plugins/Check.py: media reference fixes	
	* src/gramps_main.py: media reference fixes	
	* src/Utils.py: gnome.vfs vs. grampslib
	* src/RelLib.py: single db file, media reference fixes
	* src/MediaView.py: media reference fixes	
	
2004-02-24  Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/RelLib.py (sortbysource): Low-level implementation;
	(sortbyplace): Typo.